# iced_hello

./: .gitignore  Cargo.toml  README.md  build.rs
DOCS/: sleet_rust_hello_abi.json
config/: config.json  greeting.json
icons/: README.md  generate_icons.sh  icon.icns
icons/icon.iconset/: .gitkeep
src/: config.rs  contract_greeting.rs  main.rs  near.rs  near_test.rs
src/ui/: mod.rs  styles.rs  view.rs
