[package]
name = "hello"
version = "0.0.1"
edition = "2021"
description = "🧊 a hello iced project by sleet for interacting with a hello conrtact on near"
authors = ["SLEET.NEAR"]

[package.metadata.bundle]
name = "HELLO"
identifier = "app.sleet.hello"
icon = ["icons/icon.icns"]
version = "1.0.0"
copyright = "Copyright (c) 2025 SLEET.NEAR"
category = "public.app-category.utilities"
short_description = "a hello iced project by sleet"

[dependencies]
iced = "0.10.0"
near-sdk = "4.1.1"
near-primitives = "0.17.0"
near-jsonrpc-client = "0.5.0"
tokio = { version = "1.19.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cargo-bundle = "0.6.0"
