[package]
name = "hello"
version = "0.0.1"
edition = "2021"
description = "🧊 a hello iced project by sleet for interacting with a hello conrtact on near"
authors = ["SLEET.NEAR"]

[package.metadata.bundle]
name = "HELLO"
identifier = "app.sleet.hello"
icon = ["icons/icon.icns"]
version = "1.0.0"
copyright = "Copyright (c) 2025 SLEET.NEAR"
category = "public.app-category.utilities"
short_description = "a hello iced project by sleet"

[dependencies]
iced = { version = "0.10.0", features = ["image"] }
near-api = "0.5.0"
tokio = { version = "1.19.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "get_greeting"
path = "src/bin/get_greeting.rs"
